--- a/mintlify-demo/home.mdx
+++ b/mintlify-demo/home.mdx
@@ -6,43 +6,52 @@ export function openSearch() {
   document.getElementById('search-bar-entry').click();
 }
 
-<div className="relative w-full flex items-center justify-center" style={{ height: '18rem', overflow: 'hidden'}}>
-  <div className="absolute inset-0 bg-primary dark:bg-primary-light" style={{opacity: 0.05 }}></div>
-  <div style={{ position: 'absolute', textAlign: 'center', padding: '0 1rem' }}>
-    <div
-      className="text-gray-900 dark:text-gray-200"
+<div className="relative w-full flex items-center justify-center" style={{ height: '24rem', overflow: 'hidden' }}>
+  <div id="background-div" class="absolute inset-0" style={{height: "24rem", backgroundSize: "cover", backgroundPosition: "center"}}></div>
+  
+  <div style={{ position: 'absolute', textAlign: 'center', padding: '0 1rem', maxWidth: '100%', left: '50%', transform: 'translateX(-50%)' }}>
+    <h1
+      className="text-white "
       style={{
-       fontWeight: '600',
-       fontSize: '28px',
-       margin: '0',
+          marginTop: '4rem',
+          fontSize: '42px',
+          fontWeight: 500,
+          margin: '0',
+          whiteSpace: 'nowrap',
+          textAlign: 'center'
       }}
     >
-      Katalon docs
-    </div>
+      Welcome to Katalon's Developer Portal
+    </h1>
+    <p className="mt-2 text-white">How can we help you? </p>
     <div className="flex items-center justify-center">
+	<div className="flex items-center justify-center" style={{ width: '100%' }}>
     <button
       type="button"
-      className="hidden w-full lg:flex items-center text-sm leading-6 rounded-lg py-1.5 pl-2.5 pr-3 shadow-sm text-gray-400 dark:text-white/50 bg-background-light dark:bg-background-dark dark:brightness-[1.1] dark:ring-1 dark:hover:brightness-[1.25] ring-1 ring-gray-400/20 hover:ring-gray-600/25 dark:ring-gray-600/30 dark:hover:ring-gray-500/30 focus:outline-primary"
+      className="hidden w-full lg:flex items-center text-sm leading-6 rounded-lg py-2 pl-3 pr-3 shadow-sm text-gray-400 dark:text-white/50 bg-background-light dark:bg-background-dark dark:brightness-[1.1] dark:ring-1 dark:hover:brightness-[1.25] ring-1 ring-gray-400/20 hover:ring-gray-600/25 dark:ring-gray-600/30 dark:hover:ring-gray-500/30 focus:outline-primary"
       id="home-search-entry"
       style={{
         marginTop: '2rem',
-        maxWidth: '28rem',
+        maxWidth: '100rem',
+        width: '90%',
+        margin: '2rem auto 0'
       }}
       onClick={openSearch}
     >
       <svg
-        className="h-4 w-4 ml-1.5 mr-3 flex-none bg-gray-500 hover:bg-gray-600 dark:bg-white/50 dark:hover:bg-white/70"
+        className="h-4 w-4 ml-1.5 flex-none bg-primary-light hover:bg-gray-600 dark:bg-white/50 dark:hover:bg-white/70"
         style={{
+          marginRight: '0.5rem',
          maskImage:
            'url("https://mintlify.b-cdn.net/v6.5.1/solid/magnifying-glass.svg")',
          maskRepeat: 'no-repeat',
          maskPosition: 'center center',
         }}
       />
-
-      Search or ask
+      Search docs, guides, and more... 
     </button>
     </div>
+	</div>
   </div>
 </div>
 
